[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/dragonScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/AmaticSC-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/TilesetScenes/MountainTiles.tres" type="TileSet" id=3]
[ext_resource path="res://Assets/Sprites/Objects/Background/Mountain parallax/parallax-bg-mountain-edition-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Objects/Background/Mountain parallax/parallax-bg-mountain-edition-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Objects/Background/Mountain parallax/parallax-bg-mountain-edition-3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Objects/Background/Mountain parallax/parallax-bg-mountain-edition-4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Objects/Background/Mountain parallax/parallax-bg-mountain-edition-5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Objects/Background/Mountain parallax/parallax-bg-mountain-edition-6.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Objects/Background/mountain-peak.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Objects/Dragon/dragon-sleep.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Objects/Dragon/dragon-eye-open.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Objects/Background/stonefrags/mind-rock.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Objects/Player/NEWFOX-run-HUGE.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sounds/Background/level1musicpart2b.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Fonts/IndieFlower.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://icon.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/white-glow.png" type="Texture" id=18]

[sub_resource type="Animation" id=12]
resource_name = "GoToTheStone"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Basic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.5, 2.1, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 191.067, -26 ), Vector2( 234.236, -26 ), Vector2( 400, -300 ), Vector2( 470, -280 ), Vector2( 540, -206.831 ), Vector2( 737.67, -220.463 ), Vector2( 737.67, -361.332 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("Player/playerAni")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "FoxRun", "[stop]", "FoxRun", "[stop]" ),
"times": PoolRealArray( 0, 0.3, 2.1, 3 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/Basic:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("mind-rock:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("mind-rock:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Player/Basic:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("white-glow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2.4, 2.4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("white-glow:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "bright"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Dragon/mind-rock:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0352941, 0.360784, 0.67451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "explode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Dragon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mind-rock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "heart"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Basic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -26 ), Vector2( 191.067, -26 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("Player/playerAni")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "FoxRun", "[stop]" ),
"times": PoolRealArray( 0, 1.5 )
}

[sub_resource type="Animation" id=4]
resource_name = "textCycle"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 11.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 9, 9.5, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -543.376, 385.31 ), Vector2( -543.376, 385.31 ), Vector2( 1019.89, -40 ), Vector2( 1128.41, -60 ), Vector2( 1599.58, -60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 9, 9.5, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, -15.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 9.5, 11 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/Camera2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 8.5, 9.3, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 200, -200 ), Vector2( 200, -200 ), Vector2( 200, -200 ), Vector2( 200, -200 ), Vector2( 400, -500 ) ]
}
tracks/4/type = "animation"
tracks/4/path = NodePath("Player/playerAni")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": PoolStringArray( "FoxRun", "[stop]" ),
"times": PoolRealArray( 0, 11 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("Player/Basic:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -391.304, -21.614 ), Vector2( 0, -26 ) ]
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "fadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
resource_name = "sleep"
length = 2.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sleep dragon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=9]
resource_name = "eye-open"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("eye open:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11, 11 ]
}

[sub_resource type="Animation" id=10]
length = 0.85
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Basic:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 4, 6, 8, 10, 12, 14, 16 ]
}

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 16 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="PlyAnim" type="AnimationPlayer" parent="."]
anims/GoToTheStone = SubResource( 12 )
anims/bright = SubResource( 1 )
anims/explode = SubResource( 2 )
anims/heart = SubResource( 3 )
anims/textCycle = SubResource( 4 )
anims/walkUp = SubResource( 5 )

[node name="bgAnim" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 6 )
anims/fadeOut = SubResource( 14 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 976.0
margin_top = -831.0
margin_right = 1597.0
margin_bottom = -729.0
custom_fonts/font = SubResource( 7 )
text = "Hello."
align = 1
valign = 1
autowrap = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 35 )
rotation = -0.261799
scale = Vector2( 1, 1 )
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 262128, 14, 0, 262132, 14, 0, 262136, 14, 0, 262140, 14, 0, 196608, 14, 0, 196612, 14, 0, 196616, 14, 0, 196620, 14, 0 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -65519, 14, 0, -65515, 14, 0, -65511, 14, 0, -65507, 14, 0, -65503, 14, 0, -65499, 14, 0, -65495, 14, 0, -65491, 14, 0 )

[node name="mountain para" type="ParallaxBackground" parent="."]
editor/display_folded = true
layer = -15
offset = Vector2( 0, -200 )
transform = Transform2D( 1, 0, 0, 1, 0, -200 )
scroll_base_offset = Vector2( 0, 700 )
scroll_ignore_camera_zoom = true

[node name="bit of sky" type="ParallaxLayer" parent="mountain para"]
position = Vector2( 0, -500 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="mountain para/bit of sky"]
texture = ExtResource( 4 )
centered = false

[node name="backmost hills" type="ParallaxLayer" parent="mountain para"]
editor/display_folded = true
position = Vector2( 0, -500 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="mountain para/backmost hills"]
texture = ExtResource( 5 )
centered = false

[node name="middle hills" type="ParallaxLayer" parent="mountain para"]
editor/display_folded = true
position = Vector2( 0, -400 )
motion_scale = Vector2( 0.6, 0.6 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="mountain para/middle hills"]
texture = ExtResource( 6 )
centered = false

[node name="rocks middle" type="ParallaxLayer" parent="mountain para"]
position = Vector2( 0, -400 )
motion_scale = Vector2( 0.85, 0.8 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="mountain para/rocks middle"]
texture = ExtResource( 7 )
centered = false

[node name="rocks n dirt" type="ParallaxLayer" parent="mountain para"]
editor/display_folded = true
position = Vector2( 0, -300 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="mountain para/rocks n dirt"]
texture = ExtResource( 8 )
centered = false

[node name="front rocks" type="ParallaxLayer" parent="mountain para"]

[node name="Sprite" type="Sprite" parent="mountain para/front rocks"]
texture = ExtResource( 9 )
centered = false

[node name="mountain-peak" type="Sprite" parent="."]
position = Vector2( 2343.7, -280.396 )
scale = Vector2( 0.429719, 0.296297 )
texture = ExtResource( 10 )

[node name="Dragon" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 2268.93, -293.517 )
scale = Vector2( 2.62177, 3.34077 )

[node name="sleep dragon" type="Sprite" parent="Dragon"]
texture = ExtResource( 11 )
vframes = 5
hframes = 6
frame = 1
region_rect = Rect2( 0, 0, 410, 230 )

[node name="breath" type="AnimationPlayer" parent="Dragon"]
autoplay = "sleep"
anims/sleep = SubResource( 8 )

[node name="Node2D" type="Node2D" parent="Dragon"]

[node name="eye open" type="Sprite" parent="Dragon/Node2D"]
texture = ExtResource( 12 )
vframes = 3
hframes = 4

[node name="eye" type="AnimationPlayer" parent="Dragon/Node2D"]
anims/eye-open = SubResource( 9 )

[node name="mind-rock" type="Sprite" parent="Dragon"]
position = Vector2( 7.80908, -13.7222 )
rotation = -1.89982
scale = Vector2( 0.0611042, 0.0752966 )
texture = ExtResource( 13 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( -543.376, 385.31 )
rotation = -0.261799
z_index = 1

[node name="Basic" type="Sprite" parent="Player"]
position = Vector2( -391.304, -21.614 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 14 )
vframes = 4
hframes = 5

[node name="playerAni" type="AnimationPlayer" parent="Player"]
anims/FoxRun = SubResource( 10 )

[node name="bg" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 15 )
volume_db = 1.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="Player"]
rotation = -7.85592e-005
scale = Vector2( 0.999997, 1 )
offset = Vector2( 200, -200 )
current = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="nextline" type="Label" parent="HUD"]
modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 16.0
margin_top = 41.7121
margin_right = 252.0
margin_bottom = 73.7121
custom_fonts/font = SubResource( 11 )
text = "Press 'LMB' to fast-forward"

[node name="background" type="Sprite" parent="HUD"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 483.347, 297.632 )
scale = Vector2( 19.4618, 12.2911 )
z_index = 2
texture = ExtResource( 17 )

[node name="skip" type="Label" parent="HUD"]
modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 16.0
margin_top = 16.7924
margin_right = 229.0
margin_bottom = 47.7924
custom_fonts/font = SubResource( 13 )
text = "Press 'S' to skip"

[node name="mind-rock" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2343.7, -400.586 )
texture = ExtResource( 13 )

[node name="white-glow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2400.4, -363.457 )
texture = ExtResource( 18 )

[connection signal="animation_finished" from="PlyAnim" to="." method="_on_PlyAnim_animation_finished"]
[connection signal="animation_finished" from="bgAnim" to="." method="_on_bgAnim_animation_finished"]
[connection signal="animation_finished" from="Dragon/Node2D/eye" to="." method="_on_eye_animation_finished"]
